<resources>
    <string name="app_name">StudyBuddy</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_settings">Study Buddy Settings</string>
    <string name="RegistrationActivity">Create New User Account</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="message">Message...</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_link">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="application_logo">Application Logo</string>
    <string name="textview">TextView</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="classes">Classes</string>
    <string name="log_out">Log Out</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="create_account">Create Account</string>
    <string name="return_to_login">Already a member? Login</string>
    <string name="splash_logo">Splash Logo</string>
    <string name="sender_ipsum">Sender Ipsum</string>
    <string name="_14_54">14:54</string>
    <string name="hello">Hello</string>
    <string name="hello_how_are_you">Hello, how are you?</string>
    <string name="study_buddy">Study Buddy</string>
    <string name="professor">Professor:</string>
    <string name="description">Description</string>
    <string name="register">Register</string>
    <string name="main_menu">Main Menu</string>
    <string name="chat_room">Chat Room</string>
    <string name="change_password">ChangePassword</string>
    <string name="send_image_to_chat_room">Send Image to Chat Room</string>
    <string name="classmates">Classmates</string>
    <string name="try_again">Try Again</string>
    <string name="attendance">Attendance</string>

    <string name="studentCredentials">studentCredentials</string>
    <string name="student_name">StudentName</string>
    <string name="studentNameRow">studentNameRow</string>
    <string name="studentName">studentName</string>
    <string name="StudentEmail">StudentEmail</string>
    <string name="studentEmailRow">studentEmailRow</string>
    <string name="studentEmail">studentEmail</string>
</resources>
