<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

        <TextView
            android:id="@+id/txtSender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/sender_ipsum"
            android:textSize="16sp"
            android:layout_alignParentStart="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="6dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/txtDate"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/holo_purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:paddingBottom="6dp"
            android:textSize="12sp"
            android:text="@string/_14_54"
            android:layout_alignBottom="@+id/txtSender"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtSender"
            android:layout_alignParentEnd="true"
            android:padding="12dp"
            android:background="@drawable/purple_bubble"
            >

            <TextView
                android:id="@+id/txtMessage"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:text="@string/hello_how_are_you" />
        </RelativeLayout>
</RelativeLayout>
