<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    tools:context="edu.uncg.studdybuddy.studybuddy.MainMenu"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/attendanceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:visibility="visible"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:visibility="visible"
        tools:layout_editor_absoluteX="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:paddingBottom="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/logOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/log_out"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:visibility="visible"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="356dp" />
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>
